[package]
name = "tokio-rustls"
version = "0.3.1"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/tokio-rustls"
homepage = "https://github.com/quininer/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]

[badges]
travis-ci = { repository = "quininer/tokio-rustls" }
appveyor = { repository = "quininer/tokio-rustls" }

[features]
danger = [ "rustls/dangerous_configuration" ]

[dependencies]
futures = "0.1"
tokio-io = "0.1"
rustls = "0.11"
tokio-proto = { version = "0.1", optional = true }

[dev-dependencies]
tokio-core = "0.1"
clap = "2.20"
webpki-roots = "0.13"

[target.'cfg(unix)'.dev-dependencies]
tokio-file-unix = "0.4"

[patch.crates-io]
sct = { git="https://github.com/briansmith/sct.rs.git", branch="bump-ring" }
ring = { git="https://github.com/markuskobler/ring.git", branch="load-agreement-priv-key" }
rustls = { git="https://github.com/briansmith/rustls.git", branch="webpki-roots-0.13" }
webpki-roots = { git="https://github.com/briansmith/webpki-roots.git", branch="bump-webpki" }
